# python-obfuscation

./: .gitignore  Makefile  README.md  codecov.yml  package-lock.json  pyproject.toml
.circleci/: config.yml
python_obfuscation/: __main__.py  obfuscation.py
tests/: test_main.py  test_obfuscation.py
