[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[project]
name = "python-obfuscation"
description = ""
requires-python = ">=3.10"
authors = [{ name = "Tim Cogan", email = "timothycogan@gmail.com" }]
dependencies = []
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]

[tool.autoflake]
remove-all-unused-imports = true
remove-unused-variables = true

[tool.autopep8]
max_line_length = 120
ignore = "E501,W6,E203"
in-place = true
recursive = true
aggressive = 3

[tool.black]
line-length = 120
target-version = ['py37']

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 119
lines_after_imports = 2
multi_line_output = 3
use_parentheses = false

[tool.pdm]
version = { source = "scm" }

[tool.pdm.dev-dependencies]
test = ["pytest", "pytest-mock", "pytest-cov", "coverage"]
quality = ["autoflake", "autopep8", "black", "flake8", "isort"]

[tool.pytest.ini_options]
markers = ["ci_skip"]

[project.scripts]
wrapped-ssh = "python_obfuscation.__main__:entrypoint"
